Make progress on top section and add image.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 lower contrast.</p>
             <button class="signup">Sign Up</button>
         </div>
+        <img src="images/puppy-on-box-unsplash.jpg" alt="White puppy on top of a cardboard box" class="first-item">
     </div>
 
 </body>
