Change topic to bass and create second section.

--- a/index.html
+++ b/index.html
@@ -12,22 +12,44 @@
 <body>
 
     <nav class="header">
-        <div class="header-item header-logo">Header Logo</div>
+        <div class="header-item header-logo"><img class="header-logo-image" src="images/bass-logo.png" alt=""></div>
         <ul class="header-item header-links">
-            <li class="header-links-item"><a href="#">header link one</a></li>
-            <li class="header-links-item"><a href="#">header link two</a></li>
-            <li class="header-links-item"><a href="#">header link three</a></li>
+            <li class="header-links-item"><a href="#">We are not a cult</a></li>
+            <li class="header-links-item"><a href="#">Contact</a></li>
+            <li class="header-links-item"><a href="#">Join the cult!</a></li>
         </ul>
     </nav>
 
     <div class="first-portion">
-        <div class="first-item">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is
-                lower contrast.</p>
+        <div class="first-item text">
+            <h1>The bass is really awesome</h1>
+            <p>This website shows you a small glimpse of how awesome the bass is, both in its clasical form and its
+                electric form. Embrade the bass, love the bass.</p>
             <button class="signup">Sign Up</button>
         </div>
-        <img src="images/puppy-on-box-unsplash.jpg" alt="White puppy on top of a cardboard box" class="first-item">
+        <img src="images/freestock-mainbass.jpg" alt="White puppy on top of a cardboard box" class="first-item">
+    </div>
+
+    <div class="second-portion">
+        <h2>Different playing styles</h2>
+        <div class="second-item card-container">
+            <div class="second-card">
+                <img class="second-card-item image" src="images/dorien-monnens-fingerstyle.jpg" alt="">
+                <p class="second-card-item text">Finger style</p>
+            </div>
+            <div class="second-card">
+                <img src="images/cynthia-reed-tapping.jpg" alt="" class="second-card-item image">
+                <p class="second-card-item text">Tapping</p>
+            </div>
+            <div class="second-card">
+                <img src="images/david-suarez-slapbass.jpg" alt="" class="second-card-item image">
+                <p class="second-card-item text">Slap tha bass</p>
+            </div>
+            <div class="second-card">
+                <img src="images/miti-doublebass.jpg" alt="" class="second-card-item image">
+                <p class="second-card-item text">Double bass</p>
+            </div>
+        </div>
     </div>
 
 </body>
