Finish second section, add header marging and text color.

--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
         <div class="second-item card-container">
             <div class="second-card">
                 <img class="second-card-item image" src="images/dorien-monnens-fingerstyle.jpg" alt="">
-                <p class="second-card-item text">Finger style</p>
+                <p class="second-card-item text">Finger style, the basics for playing bass.</p>
             </div>
             <div class="second-card">
                 <img src="images/cynthia-reed-tapping.jpg" alt="" class="second-card-item image">
-                <p class="second-card-item text">Tapping</p>
+                <p class="second-card-item text">Tapping, for when you want to be a little fancy.</p>
             </div>
             <div class="second-card">
                 <img src="images/david-suarez-slapbass.jpg" alt="" class="second-card-item image">
-                <p class="second-card-item text">Slap tha bass</p>
+                <p class="second-card-item text">Slap tha bass, you know you like it.</p>
             </div>
             <div class="second-card">
                 <img src="images/miti-doublebass.jpg" alt="" class="second-card-item image">
-                <p class="second-card-item text">Double bass</p>
+                <p class="second-card-item text">Double bass, for those times you need to be a gentleperson.</p>
             </div>
         </div>
     </div>
