Add quote section for bass.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,15 @@
         </div>
     </div>
 
+    <div class="third-portion">
+        <p class="third-item">Slap like now... Epic... O M G... The love for bass has kept us together. Stay funky bros.
+        </p>
+        <div class="third-item">
+            <h3 class="third-source">-David504, God of Bass</h3>
+        </div>
+
+    </div>
+
 </body>
 
 </html>
