Complete website. Add sign up section and footer.

--- a/index.html
+++ b/index.html
@@ -58,8 +58,19 @@
         <div class="third-item">
             <h3 class="third-source">-David504, God of Bass</h3>
         </div>
-
     </div>
+
+    <div class="fourth-portion">
+        <div class="fourth-item">
+            <h3>Time for you to learn the bass! Yes, you!</h3>
+            <p>Sign up to access bassbuzz channel, those guys make really funny tutorials!</p>
+        </div>
+        <button class="fourth-item signup">Sign Up</button>
+    </div>
+
+    <footer>
+        Copyright &copy; The Odin Project 2021
+    </footer>
 
 </body>
 
